--- a/Pre-processing.ipynb
+++ b/Pre-processing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 110,
    "id": "fad2be3d",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 111,
    "id": "c89b51a9",
    "metadata": {},
    "outputs": [
@@ -57,20 +57,20 @@
       "103                                    Ariana Grande    08-Mar-24  14-Mar-24   \n",
       "104                                     Benson Boone    18-Jan-24  28-Mar-24   \n",
       "\n",
-      "     Weeks  Avs.  \n",
-      "0        2  25.5  \n",
-      "1       14  51.9  \n",
-      "2        1  41.4  \n",
-      "3       14  45.9  \n",
-      "4        4  32.1  \n",
-      "..     ...   ...  \n",
-      "100      1  53.9  \n",
-      "101      3  37.9  \n",
-      "102      4  43.4  \n",
-      "103      2  58.0  \n",
-      "104      2  54.7  \n",
+      "     Weeks  Avs.          Genre  \n",
+      "0        2  25.5            R&B  \n",
+      "1       14  51.9            Pop  \n",
+      "2        1  41.4        Hip Hop  \n",
+      "3       14  45.9  Reggaeton Pop  \n",
+      "4        4  32.1      Latin Pop  \n",
+      "..     ...   ...            ...  \n",
+      "100      1  53.9      Dance Pop  \n",
+      "101      3  37.9        Bachata  \n",
+      "102      4  43.4            Pop  \n",
+      "103      2  58.0      Synth Pop  \n",
+      "104      2  54.7            Pop  \n",
       "\n",
-      "[105 rows x 6 columns]\n",
+      "[105 rows x 7 columns]\n",
       "     Rank                            Song                        Artist  \\\n",
       "0       1                 Blinding Lights                    The Weeknd   \n",
       "1       2                    Shape of You                    Ed Sheeran   \n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 112,
    "id": "fdf264a8",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
    "id": "66c94466",
    "metadata": {},
    "outputs": [
@@ -171,10 +171,11 @@
        "Issue Date      False\n",
        "Weeks           False\n",
        "Avs.            False\n",
+       "Genre           False\n",
        "dtype: bool"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 114,
    "id": "8714a9f1",
    "metadata": {},
    "outputs": [
@@ -210,7 +211,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 115,
    "id": "3d9c710c",
    "metadata": {},
    "outputs": [
@@ -237,8 +238,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original shape: (105, 6)\n",
-      "Cleaned shape: (105, 6)\n"
+      "Original shape: (105, 7)\n",
+      "Cleaned shape: (105, 7)\n"
      ]
     }
    ],
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 116,
    "id": "de643db9",
    "metadata": {},
    "outputs": [
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 117,
    "id": "0f34d346",
    "metadata": {},
    "outputs": [
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 118,
    "id": "bb3bd024",
    "metadata": {},
    "outputs": [
@@ -349,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 119,
    "id": "a7f0e454",
    "metadata": {},
    "outputs": [
@@ -376,24 +377,24 @@
       "15                            Stay  The Kid LaroifeaturingJustin Bieber   \n",
       "16                      Heat Waves                        Glass Animals   \n",
       "\n",
-      "   Release Date Issue Date  Weeks  Avs.  Rank  \\\n",
-      "0     21-Sep-16  29-Dec-16      2  25.5     5   \n",
-      "1     30-Mar-17  20-Apr-17      1  41.4    49   \n",
-      "2     15-Sep-17  21-Sep-17     17  38.6    11   \n",
-      "3     17-Apr-20  04-Jun-20      2  38.0    11   \n",
-      "4     03-Aug-17  18-Jan-18      1  30.9    65   \n",
-      "5     27-Apr-18  03-May-18      2  38.2    90   \n",
-      "6     18-Oct-18  17-Jan-19      2  33.6     4   \n",
-      "7     18-Jan-19  24-Jan-19     10  47.9    42   \n",
-      "8     29-Mar-19  04-Apr-19      6  42.6    24   \n",
-      "9     30-Aug-19  12-Sep-19      1  43.4    30   \n",
-      "10    10-May-19  17-Oct-19      2  42.9     8   \n",
-      "11    06-Dec-19  13-Feb-20      1  46.2   103   \n",
-      "12    30-Oct-20  12-Nov-20      6  47.7    86   \n",
-      "13    26-Mar-21  15-Apr-21      5  49.4    99   \n",
-      "14    14-May-21  20-May-21      7  63.2    54   \n",
-      "15    09-Jul-21  05-Aug-21     11  60.8     9   \n",
-      "16    29-Jun-20  27-Jan-22     10  30.7    12   \n",
+      "   Release Date Issue Date  Weeks  Avs.       Genre  Rank  \\\n",
+      "0     21-Sep-16  29-Dec-16      2  25.5         R&B     5   \n",
+      "1     30-Mar-17  20-Apr-17      1  41.4     Hip Hop    49   \n",
+      "2     15-Sep-17  21-Sep-17     17  38.6        Trap    11   \n",
+      "3     17-Apr-20  04-Jun-20      2  38.0        Trap    11   \n",
+      "4     03-Aug-17  18-Jan-18      1  30.9   Latin Pop    65   \n",
+      "5     27-Apr-18  03-May-18      2  38.2     Hip Hop    90   \n",
+      "6     18-Oct-18  17-Jan-19      2  33.6   Dream Pop     4   \n",
+      "7     18-Jan-19  24-Jan-19     10  47.9         Pop    42   \n",
+      "8     29-Mar-19  04-Apr-19      6  42.6         Pop    24   \n",
+      "9     30-Aug-19  12-Sep-19      1  43.4   Soft rock    30   \n",
+      "10    10-May-19  17-Oct-19      2  42.9  Electropop     8   \n",
+      "11    06-Dec-19  13-Feb-20      1  46.2        Rock   103   \n",
+      "12    30-Oct-20  12-Nov-20      6  47.7   Reggaeton    86   \n",
+      "13    26-Mar-21  15-Apr-21      5  49.4         Pop    99   \n",
+      "14    14-May-21  20-May-21      7  63.2        Punk    54   \n",
+      "15    09-Jul-21  05-Aug-21     11  60.8  Electropop     9   \n",
+      "16    29-Jun-20  27-Jan-22     10  30.7       Indie    12   \n",
       "\n",
       "                               Artist_y  Streams(billions) ReleaseDate  \n",
       "0          The WeekndfeaturingDaft Punk              3.150   21-Sep-16  \n",
@@ -429,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 120,
    "id": "aa11adcb",
    "metadata": {},
    "outputs": [
@@ -456,24 +457,24 @@
       "15                            Stay  The Kid LaroifeaturingJustin Bieber   \n",
       "16                      Heat Waves                        Glass Animals   \n",
       "\n",
-      "   Release Date Issue Date   Weeks      Avs.  Rank  \\\n",
-      "0     21-Sep-16  29-Dec-16  0.0625  0.000000     5   \n",
-      "1     30-Mar-17  20-Apr-17  0.0000  0.421751    49   \n",
-      "2     15-Sep-17  21-Sep-17  1.0000  0.347480    11   \n",
-      "3     17-Apr-20  04-Jun-20  0.0625  0.331565    11   \n",
-      "4     03-Aug-17  18-Jan-18  0.0000  0.143236    65   \n",
-      "5     27-Apr-18  03-May-18  0.0625  0.336870    90   \n",
-      "6     18-Oct-18  17-Jan-19  0.0625  0.214854     4   \n",
-      "7     18-Jan-19  24-Jan-19  0.5625  0.594164    42   \n",
-      "8     29-Mar-19  04-Apr-19  0.3125  0.453581    24   \n",
-      "9     30-Aug-19  12-Sep-19  0.0000  0.474801    30   \n",
-      "10    10-May-19  17-Oct-19  0.0625  0.461538     8   \n",
-      "11    06-Dec-19  13-Feb-20  0.0000  0.549072   103   \n",
-      "12    30-Oct-20  12-Nov-20  0.3125  0.588859    86   \n",
-      "13    26-Mar-21  15-Apr-21  0.2500  0.633952    99   \n",
-      "14    14-May-21  20-May-21  0.3750  1.000000    54   \n",
-      "15    09-Jul-21  05-Aug-21  0.6250  0.936340     9   \n",
-      "16    29-Jun-20  27-Jan-22  0.5625  0.137931    12   \n",
+      "   Release Date Issue Date   Weeks      Avs.       Genre  Rank  \\\n",
+      "0     21-Sep-16  29-Dec-16  0.0625  0.000000         R&B     5   \n",
+      "1     30-Mar-17  20-Apr-17  0.0000  0.421751     Hip Hop    49   \n",
+      "2     15-Sep-17  21-Sep-17  1.0000  0.347480        Trap    11   \n",
+      "3     17-Apr-20  04-Jun-20  0.0625  0.331565        Trap    11   \n",
+      "4     03-Aug-17  18-Jan-18  0.0000  0.143236   Latin Pop    65   \n",
+      "5     27-Apr-18  03-May-18  0.0625  0.336870     Hip Hop    90   \n",
+      "6     18-Oct-18  17-Jan-19  0.0625  0.214854   Dream Pop     4   \n",
+      "7     18-Jan-19  24-Jan-19  0.5625  0.594164         Pop    42   \n",
+      "8     29-Mar-19  04-Apr-19  0.3125  0.453581         Pop    24   \n",
+      "9     30-Aug-19  12-Sep-19  0.0000  0.474801   Soft rock    30   \n",
+      "10    10-May-19  17-Oct-19  0.0625  0.461538  Electropop     8   \n",
+      "11    06-Dec-19  13-Feb-20  0.0000  0.549072        Rock   103   \n",
+      "12    30-Oct-20  12-Nov-20  0.3125  0.588859   Reggaeton    86   \n",
+      "13    26-Mar-21  15-Apr-21  0.2500  0.633952         Pop    99   \n",
+      "14    14-May-21  20-May-21  0.3750  1.000000        Punk    54   \n",
+      "15    09-Jul-21  05-Aug-21  0.6250  0.936340  Electropop     9   \n",
+      "16    29-Jun-20  27-Jan-22  0.5625  0.137931       Indie    12   \n",
       "\n",
       "                               Artist_y  Streams(billions) ReleaseDate  \n",
       "0          The WeekndfeaturingDaft Punk           0.934249   21-Sep-16  \n",
